Adding logo images to WhatsApp or your phone

--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,14 @@
         
         <button type="submit" class="btn">שלח הודעה</button>
       </form>
-      <p>או התקשר: <a href="tel:+972546656076">+972 54-6656076</a></p>
-      <p>או שלח הודעה בוואטסאפ: <a href="https://wa.me/972546656076" target="_blank">לחץ כאן</a></p>
+      <div class="contact-logos">
+        <a href="tel:++972546656076">
+          <img src="assets/img/phone-logo.png" alt="טלפון" class="logo-icon">
+        </a>
+        <a href="https://wa.me/972546656076" target="_blank">
+          <img src="assets/img/whatsapp-logo.png" alt="וואצאפ" class="logo-icon">
+        </a>
+      </div>
     </section>
   </main>
 
