--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <button type="submit" class="btn">שלח הודעה</button>
       </form>
       <div class="contact-logos">
-        <a href="tel:++972546656076">
+        <a href="tel:+972546656076">
           <img src="/assets/img/phone-logo.png" alt="טלפון" class="logo-icon">
         </a>
         <a href="https://wa.me/972546656076" target="_blank">
