--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
       </form>
       <div class="contact-logos">
         <a href="tel:+972546656076">
-          <img src="/assets/img/phone-logo.png" alt="טלפון" class="logo-icon">
+          <img src="assets/img/phone-logo.png" alt="טלפון" class="logo-icon">
         </a>
         <a href="https://wa.me/972546656076" target="_blank">
-          <img src="/assets/img/whatsapp-logo.png" alt="וואצאפ" class="logo-icon">
+          <img src="assets/img/whatsapp-logo.png" alt="וואצאפ" class="logo-icon">
         </a>
       </div>
     </section>
