--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
   <textarea id="message" name="message" required></textarea>
 
   <!-- שדה נסתר שמגדיר לאן יפנה המשתמש לאחר שליחה מוצלחת -->
-  <input type="hidden" name="_redirect" value="https://your-github-username.github.io/your-repo-name/success.html">
+  <input type="hidden" name="_redirect" value="https://neo050.github.io/SolarSolutions/success.html">
 
   <button type="submit" class="btn">שלח הודעה</button>
 </form>
