--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,9 @@
   <label for="email">אימייל:</label>
   <input type="email" id="email" name="email" required>
 
+  <label for="phone">פלאפון:</label>
+  <input type="number" id="phone" name="phone" required>
+
   <label for="message">הודעה:</label>
   <textarea id="message" name="message" required></textarea>
   <button type="submit" class="btn">שלח הודעה</button>
