--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <section class="contact">
       <h1>צור קשר</h1>
   <form 
-    action="https://formspree.io/f/mdkeklpn" 
+    action="https://formsubmit.co/neoray.asking666@gmail.com" 
     method="POST"
     id="contactForm"
     >
