--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
   <script>
     // 2) אתחול EmailJS עם מפתח פומבי (Public Key) שאתה מקבל מ-EmailJS
     (function() {
-      emailjs.init("YOUR_PUBLIC_KEY_HERE");
+      emailjs.init("7BQ442uTTcxN1Owoa");
     })();
   </script>
 
