--- a/success.html
+++ b/success.html
@@ -10,14 +10,28 @@
   <header>
     <div class="container">
       <a href="index.html" class="logo">לוגו החברה</a>
+      <nav>
+        <ul>
+          <li><a href="index.html">בית</a></li>
+          <li><a href="about.html">על החברה</a></li>
+          <li><a href="solutions.html">פתרונות סולאריים</a></li>
+          <li><a href="projects.html">פרויקטים</a></li>
+          <li><a href="contact.html">צור קשר</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <main>
     <section class="contact-success">
       <h1>תודה על פנייתך!</h1>
       <p>הפרטים נקלטו בהצלחה. ניצור קשר בהקדם האפשרי.</p>
-      <a href="index.html" class="btn">חזרה לדף הבית</a>
     </section>
+
+    <footer>
+      <div class="container">
+        <p>&copy; 2025 כל הזכויות שמורות - חברת מערכות סולאריות</p>
+      </div>
+    </footer>
   </main>
 </body>
 </html>
